infra/k8s/ticket-depl.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: ticket-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket
  template: 
    metadata:
      labels:
        app: ticket
    spec:
      containers:
        - name: ticket
          image: 89910907/ticket-app-ticket
---

apiVersion: v1
kind: Service 

metadata:
  name: ticket-svc
spec:
  selector:
    app: ticket
  ports:
    - name: ticket
      protocol: TCP
      port: 3000
      targetPort: 3000
