infra/k8s/ingress.srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  rules:
    - host: ticketapp.dev
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-svc
              servicePort: 3000
          - path: /api/order/?(.*)
            backend:
              serviceName: order-svc
              servicePort: 3000
          - path: /api/ticket/?(.*)
            backend:
              serviceName: ticket-svc
              servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: client-svc
              servicePort: 3000
